# snippets-everywhere

./: Cargo.toml  README.md
samples/: echo.json  echo.json5  one-description.json  one-description.json5  one-description.snippets  one-options.json  one-options.snippets  one-quoted.json5  one-quoted.snippets  one-unquoted.json5  one-unquoted.snippets  one.snippets  priority.json5  priority.snippets  simple.json  simple.json5  simple.snippets  technically-trigger-but-not.json5  technically-trigger-but-not.snippets
src/: lib.rs  main.rs  ui.rs
src/backends/: mod.rs  ols.rs  ultisnips.rs
src/backends/ultisnips/: de.rs  mod.rs  ser.rs  tests.rs
src/parse/: mod.rs  ols.rs
src/serialize/: mod.rs  ols.rs  ultisnips.rs
