[package]
name = "snippets-everywhere"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow       = "1.0"
clap         = { version = "4.3", features = ["string"] }
chumsky      = "1.0.0-alpha.4"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
json5        = "0.4"
thiserror    = "1.0"
