[package]
name = "snippets-everywhere"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow       = "1.0"
clap         = { version = "4.3", features = ["string"] }
itertools    = "0.11"
serde        = { version = "1.0", features = ["derive"] }
unicode-segmentation = "1.10"
json5        = "0.4"
thiserror    = "1.0"
